ENH: zh-CN translation of recent commits
Change-Id: I83b9cf087f59a0137f7f00a3649df5d410cc2576

--- a/bbl/i18n/BambuStudio.pot
+++ b/bbl/i18n/BambuStudio.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-09-21 11:05+0800\n"
+"POT-Creation-Date: 2022-09-27 16:25+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -813,7 +813,7 @@ msgstr ""
 msgid "Clone"
 msgstr ""
 
-msgid "Reduce Triangles"
+msgid "Simplify Model"
 msgstr ""
 
 msgid "Center"
@@ -1787,12 +1787,10 @@ msgstr ""
 msgid "Tool"
 msgstr ""
 
-#, possible-c-format, possible-boost-format
-msgid "Speed: %.f"
+msgid "Speed: "
 msgstr ""
 
-#, possible-c-format, possible-boost-format
-msgid "Flow: %.f"
+msgid "Flow: "
 msgstr ""
 
 msgid "Loading G-codes"
@@ -1891,6 +1889,9 @@ msgstr ""
 msgid "Flushed filament"
 msgstr ""
 
+msgid "Total"
+msgstr ""
+
 msgid "Filament change times"
 msgstr ""
 
@@ -1922,9 +1923,6 @@ msgid "Prepare time"
 msgstr ""
 
 msgid "Model printing time"
-msgstr ""
-
-msgid "Total"
 msgstr ""
 
 msgid "Switch to silent mode"
@@ -2431,11 +2429,14 @@ msgstr ""
 msgid "Initializing..."
 msgstr ""
 
-#, possible-c-format, possible-boost-format
-msgid "Initialize failed [%d]!"
+msgid "Loading..."
 msgstr ""
 
-msgid "Loading..."
+msgid "Initialize failed (Not supported)!"
+msgstr ""
+
+#, possible-c-format, possible-boost-format
+msgid "Initialize failed [%d]!"
 msgstr ""
 
 msgid "Stopped."
@@ -2457,16 +2458,43 @@ msgstr ""
 msgid "All Files"
 msgstr ""
 
+msgid "Group files by year, recent first."
+msgstr ""
+
+msgid "Group files by month, recent first."
+msgstr ""
+
+msgid "Show all files, recent first."
+msgstr ""
+
+msgid "Switch to timelapse files."
+msgstr ""
+
 msgid "Video"
+msgstr ""
+
+msgid "Switch to video files."
+msgstr ""
+
+msgid "Delete selected files from printer."
 msgstr ""
 
 msgid "Download"
 msgstr ""
 
+msgid "Download selected files from printer."
+msgstr ""
+
 msgid "Management"
 msgstr ""
 
+msgid "Batch manage files."
+msgstr ""
+
 msgid "No printers."
+msgstr ""
+
+msgid "Not supported."
 msgstr ""
 
 msgid "Connecting..."
@@ -2568,6 +2596,12 @@ msgid "Debug Info"
 msgstr ""
 
 msgid "Printing List"
+msgstr ""
+
+msgid "Cancel print"
+msgstr ""
+
+msgid "Are you sure you want to cancel this print?"
 msgstr ""
 
 msgid "Downloading..."
@@ -2769,10 +2803,10 @@ msgctxt "Layers"
 msgid "Bottom"
 msgstr ""
 
-msgid "Spaghetti Detection"
+msgid "Spaghetti and Excess Chute Pileup Detection"
 msgstr ""
 
-msgid "Stop printing when spaghetti detected"
+msgid "Stop printing when Spaghetti or Excess Chute Pileup is detected"
 msgstr ""
 
 msgid "First Layer Inspection"
@@ -2842,11 +2876,48 @@ msgstr ""
 msgid "Flushing volumes"
 msgstr ""
 
+msgid "Add one filament"
+msgstr ""
+
+msgid "Remove last filament"
+msgstr ""
+
+msgid "Sync material list from AMS"
+msgstr ""
+
+msgid "Set filaments to use"
+msgstr ""
+
+msgid ""
+"No AMS filaments. Please select a printer in 'Device' page to load AMS info."
+msgstr ""
+
+msgid "Sync filaments with AMS"
+msgstr ""
+
+msgid ""
+"Sync filaments with AMS will drop all current selected filament presets and "
+"colors. Do you want to continue?"
+msgstr ""
+
+msgid "There are no compatible filaments, and sync is not performed."
+msgstr ""
+
 msgid "Untitled"
 msgstr ""
 
 #, possible-boost-format
 msgid "Do you want to save changes to \"%1%\"?"
+msgstr ""
+
+#, possible-c-format, possible-boost-format
+msgid ""
+"Successfully unmounted. The device %s(%s) can now be safely removed from the "
+"computer."
+msgstr ""
+
+#, possible-c-format, possible-boost-format
+msgid "Ejecting of device %s(%s) has failed."
 msgstr ""
 
 msgid "Previous unsaved project detected, do you want to restore it?"
@@ -3569,6 +3640,12 @@ msgstr ""
 msgid "Delete this preset"
 msgstr ""
 
+msgid "Search in preset"
+msgstr ""
+
+msgid "Click to reset all settings to the last saved preset."
+msgstr ""
+
 msgid ""
 "Prime tower is required by timeplase. Are you sure you want to disable both "
 "of them?"
@@ -4274,6 +4351,53 @@ msgstr ""
 msgid "Don't remind me of this version again"
 msgstr ""
 
+msgid ""
+"Are you sure you want to update? This will take about 10 minutes. Do not "
+"turn off the power while the printer is updating."
+msgstr ""
+
+msgid ""
+"An important update was detected and needs to be run before printing can "
+"continue. Do you want to update now? You can also update later from 'Upgrade "
+"firmware'."
+msgstr ""
+
+msgid ""
+"The firmware version is abnormal. Repairing and updating are required before "
+"printing. Do you want to update now? You can also update later on printer or "
+"update next time starting the studio."
+msgstr ""
+
+msgid "Model:"
+msgstr ""
+
+msgid "Serial:"
+msgstr ""
+
+msgid "Version:"
+msgstr ""
+
+msgid "Upgrade firmware"
+msgstr ""
+
+msgid "Printing"
+msgstr ""
+
+msgid "Idle"
+msgstr ""
+
+msgid "Latest version"
+msgstr ""
+
+msgid "Upgrading"
+msgstr ""
+
+msgid "Upgrading failed"
+msgstr ""
+
+msgid "Upgrading successful"
+msgstr ""
+
 msgid "Saving objects into the 3mf failed."
 msgstr ""
 
@@ -4958,6 +5082,9 @@ msgid "Monotonic line"
 msgstr ""
 
 msgid "Aligned Rectilinear"
+msgstr ""
+
+msgid "Hilbert Curve"
 msgstr ""
 
 msgid "Bottom surface pattern"
@@ -5818,6 +5945,14 @@ msgid "On build plate only"
 msgstr ""
 
 msgid "Don't create support on model surface, only on build plate"
+msgstr ""
+
+msgid "Support critical regions only"
+msgstr ""
+
+msgid ""
+"Only create support for critical regions including sharp tail, cantilever, "
+"etc."
 msgstr ""
 
 msgid "Top Z distance"
