--- a/bbl/i18n/de/BambuStudio_de.po
+++ b/bbl/i18n/de/BambuStudio_de.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-09-21 11:05+0800\n"
+"POT-Creation-Date: 2022-09-27 16:25+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -836,8 +836,8 @@ msgstr "Aktuelle Druckplatte entfernen"
 msgid "Clone"
 msgstr "Klonen"
 
-msgid "Reduce Triangles"
-msgstr "Dreiecke reduzieren"
+msgid "Simplify Model"
+msgstr ""
 
 msgid "Center"
 msgstr ""
@@ -1941,12 +1941,10 @@ msgstr "Fluss"
 msgid "Tool"
 msgstr "Werkzeug"
 
-#, c-format, boost-format
-msgid "Speed: %.f"
+msgid "Speed: "
 msgstr ""
 
-#, c-format, boost-format
-msgid "Flow: %.f"
+msgid "Flow: "
 msgstr ""
 
 msgid "Loading G-codes"
@@ -2045,6 +2043,9 @@ msgstr "Filament 1"
 msgid "Flushed filament"
 msgstr "gereinigtes Filament"
 
+msgid "Total"
+msgstr "Gesamt"
+
 msgid "Filament change times"
 msgstr "Filamentwechselzeiten"
 
@@ -2077,9 +2078,6 @@ msgstr "Vorbereitungszeit"
 
 msgid "Model printing time"
 msgstr "Druckzeit des Modell"
-
-msgid "Total"
-msgstr "Gesamt"
 
 msgid "Switch to silent mode"
 msgstr "Zum Leisemodus wechseln"
@@ -2590,12 +2588,15 @@ msgstr "Initialisierung fehlgeschlagen (Kein Gerät)!"
 msgid "Initializing..."
 msgstr "Initialisieren..."
 
+msgid "Loading..."
+msgstr "Laden..."
+
+msgid "Initialize failed (Not supported)!"
+msgstr ""
+
 #, c-format, boost-format
 msgid "Initialize failed [%d]!"
 msgstr "Initialisierung fehlgeschlagen [%d]!"
-
-msgid "Loading..."
-msgstr "Laden..."
 
 msgid "Stopped."
 msgstr "Gestoppt."
@@ -2616,17 +2617,44 @@ msgstr "Month"
 msgid "All Files"
 msgstr ""
 
+msgid "Group files by year, recent first."
+msgstr ""
+
+msgid "Group files by month, recent first."
+msgstr ""
+
+msgid "Show all files, recent first."
+msgstr ""
+
+msgid "Switch to timelapse files."
+msgstr ""
+
 msgid "Video"
 msgstr "Video"
+
+msgid "Switch to video files."
+msgstr ""
+
+msgid "Delete selected files from printer."
+msgstr ""
 
 msgid "Download"
 msgstr "Herunterladen"
 
+msgid "Download selected files from printer."
+msgstr ""
+
 msgid "Management"
 msgstr "Management"
 
+msgid "Batch manage files."
+msgstr ""
+
 msgid "No printers."
 msgstr "No printers."
+
+msgid "Not supported."
+msgstr ""
 
 msgid "Connecting..."
 msgstr "Connecting..."
@@ -2728,6 +2756,12 @@ msgstr "Debug-Informationen"
 
 msgid "Printing List"
 msgstr "Druckliste"
+
+msgid "Cancel print"
+msgstr ""
+
+msgid "Are you sure you want to cancel this print?"
+msgstr ""
 
 msgid "Downloading..."
 msgstr "Downloading..."
@@ -2932,10 +2966,10 @@ msgctxt "Layers"
 msgid "Bottom"
 msgstr "Untere"
 
-msgid "Spaghetti Detection"
+msgid "Spaghetti and Excess Chute Pileup Detection"
 msgstr ""
 
-msgid "Stop printing when spaghetti detected"
+msgid "Stop printing when Spaghetti or Excess Chute Pileup is detected"
 msgstr ""
 
 msgid "First Layer Inspection"
@@ -3007,12 +3041,49 @@ msgstr "Druckbetttyp"
 msgid "Flushing volumes"
 msgstr "Säuberungsvolumen"
 
+msgid "Add one filament"
+msgstr ""
+
+msgid "Remove last filament"
+msgstr ""
+
+msgid "Sync material list from AMS"
+msgstr ""
+
+msgid "Set filaments to use"
+msgstr ""
+
+msgid ""
+"No AMS filaments. Please select a printer in 'Device' page to load AMS info."
+msgstr ""
+
+msgid "Sync filaments with AMS"
+msgstr ""
+
+msgid ""
+"Sync filaments with AMS will drop all current selected filament presets and "
+"colors. Do you want to continue?"
+msgstr ""
+
+msgid "There are no compatible filaments, and sync is not performed."
+msgstr ""
+
 msgid "Untitled"
 msgstr "Unbenannt"
 
 #, boost-format
 msgid "Do you want to save changes to \"%1%\"?"
 msgstr "Möchten Sie Änderungen unter \" %1% \" speichern?"
+
+#, c-format, boost-format
+msgid ""
+"Successfully unmounted. The device %s(%s) can now be safely removed from the "
+"computer."
+msgstr ""
+
+#, c-format, boost-format
+msgid "Ejecting of device %s(%s) has failed."
+msgstr ""
 
 msgid "Previous unsaved project detected, do you want to restore it?"
 msgstr ""
@@ -3782,6 +3853,12 @@ msgstr "Speichere aktuelle %s"
 msgid "Delete this preset"
 msgstr "Lösche diese Voreinstellung"
 
+msgid "Search in preset"
+msgstr ""
+
+msgid "Click to reset all settings to the last saved preset."
+msgstr ""
+
 msgid ""
 "Prime tower is required by timeplase. Are you sure you want to disable both "
 "of them?"
@@ -4545,6 +4622,53 @@ msgid "New version of Bambu Studio"
 msgstr "Neue Version von Bambu Studio"
 
 msgid "Don't remind me of this version again"
+msgstr ""
+
+msgid ""
+"Are you sure you want to update? This will take about 10 minutes. Do not "
+"turn off the power while the printer is updating."
+msgstr ""
+
+msgid ""
+"An important update was detected and needs to be run before printing can "
+"continue. Do you want to update now? You can also update later from 'Upgrade "
+"firmware'."
+msgstr ""
+
+msgid ""
+"The firmware version is abnormal. Repairing and updating are required before "
+"printing. Do you want to update now? You can also update later on printer or "
+"update next time starting the studio."
+msgstr ""
+
+msgid "Model:"
+msgstr ""
+
+msgid "Serial:"
+msgstr ""
+
+msgid "Version:"
+msgstr ""
+
+msgid "Upgrade firmware"
+msgstr ""
+
+msgid "Printing"
+msgstr ""
+
+msgid "Idle"
+msgstr ""
+
+msgid "Latest version"
+msgstr ""
+
+msgid "Upgrading"
+msgstr ""
+
+msgid "Upgrading failed"
+msgstr ""
+
+msgid "Upgrading successful"
 msgstr ""
 
 msgid "Saving objects into the 3mf failed."
@@ -5347,6 +5471,9 @@ msgid "Monotonic line"
 msgstr "Monotone Linie"
 
 msgid "Aligned Rectilinear"
+msgstr ""
+
+msgid "Hilbert Curve"
 msgstr ""
 
 msgid "Bottom surface pattern"
@@ -6347,6 +6474,14 @@ msgstr ""
 "Stützen nicht auf der Modelloberfläche, sondern nur auf der Druckplatte "
 "erzeugen"
 
+msgid "Support critical regions only"
+msgstr ""
+
+msgid ""
+"Only create support for critical regions including sharp tail, cantilever, "
+"etc."
+msgstr ""
+
 msgid "Top Z distance"
 msgstr "Oberer Z-Abstand"
 
@@ -6861,6 +6996,9 @@ msgstr "Support: Löcher in Schicht %d repairieren"
 #, c-format, boost-format
 msgid "Support: propagate branches at layer %d"
 msgstr "Support: Verbreiten von Zweigen auf Ebene %d"
+
+#~ msgid "Reduce Triangles"
+#~ msgstr "Dreiecke reduzieren"
 
 #~ msgid ""
 #~ "Switch to zig-zag pattern?\n"
