--- a/bbl/i18n/en/BambuStudio_en.po
+++ b/bbl/i18n/en/BambuStudio_en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-09-21 11:05+0800\n"
+"POT-Creation-Date: 2022-09-27 16:25+0800\n"
 "Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -823,8 +823,8 @@ msgstr "Remove the selected plate"
 msgid "Clone"
 msgstr "Clone"
 
-msgid "Reduce Triangles"
-msgstr "Reduce Triangles"
+msgid "Simplify Model"
+msgstr ""
 
 msgid "Center"
 msgstr ""
@@ -1897,12 +1897,10 @@ msgstr "Flow"
 msgid "Tool"
 msgstr "Tool"
 
-#, c-format, boost-format
-msgid "Speed: %.f"
+msgid "Speed: "
 msgstr ""
 
-#, c-format, boost-format
-msgid "Flow: %.f"
+msgid "Flow: "
 msgstr ""
 
 msgid "Loading G-codes"
@@ -2001,6 +1999,9 @@ msgstr "Filament 1"
 msgid "Flushed filament"
 msgstr "Flushed filament"
 
+msgid "Total"
+msgstr "Total"
+
 msgid "Filament change times"
 msgstr "Filament change times"
 
@@ -2033,9 +2034,6 @@ msgstr "Prepare time"
 
 msgid "Model printing time"
 msgstr "Model printing time"
-
-msgid "Total"
-msgstr "Total"
 
 msgid "Switch to silent mode"
 msgstr "Switch to silent mode"
@@ -2550,12 +2548,15 @@ msgstr "Initialization failed (No Device)!"
 msgid "Initializing..."
 msgstr "Initializing..."
 
+msgid "Loading..."
+msgstr "Loading..."
+
+msgid "Initialize failed (Not supported)!"
+msgstr ""
+
 #, c-format, boost-format
 msgid "Initialize failed [%d]!"
 msgstr "Initalization failed [%d]!"
-
-msgid "Loading..."
-msgstr "Loading..."
 
 msgid "Stopped."
 msgstr "Stopped."
@@ -2576,16 +2577,43 @@ msgstr ""
 msgid "All Files"
 msgstr ""
 
+msgid "Group files by year, recent first."
+msgstr ""
+
+msgid "Group files by month, recent first."
+msgstr ""
+
+msgid "Show all files, recent first."
+msgstr ""
+
+msgid "Switch to timelapse files."
+msgstr ""
+
 msgid "Video"
+msgstr ""
+
+msgid "Switch to video files."
+msgstr ""
+
+msgid "Delete selected files from printer."
 msgstr ""
 
 msgid "Download"
 msgstr "Download"
 
+msgid "Download selected files from printer."
+msgstr ""
+
 msgid "Management"
 msgstr ""
 
+msgid "Batch manage files."
+msgstr ""
+
 msgid "No printers."
+msgstr ""
+
+msgid "Not supported."
 msgstr ""
 
 msgid "Connecting..."
@@ -2688,6 +2716,12 @@ msgstr "Debug Info"
 
 msgid "Printing List"
 msgstr "Printing list"
+
+msgid "Cancel print"
+msgstr ""
+
+msgid "Are you sure you want to cancel this print?"
+msgstr ""
 
 msgid "Downloading..."
 msgstr ""
@@ -2892,10 +2926,10 @@ msgctxt "Layers"
 msgid "Bottom"
 msgstr "Bottom"
 
-msgid "Spaghetti Detection"
+msgid "Spaghetti and Excess Chute Pileup Detection"
 msgstr ""
 
-msgid "Stop printing when spaghetti detected"
+msgid "Stop printing when Spaghetti or Excess Chute Pileup is detected"
 msgstr ""
 
 msgid "First Layer Inspection"
@@ -2965,12 +2999,49 @@ msgstr "Bed type"
 msgid "Flushing volumes"
 msgstr "Flushing volumes"
 
+msgid "Add one filament"
+msgstr ""
+
+msgid "Remove last filament"
+msgstr ""
+
+msgid "Sync material list from AMS"
+msgstr ""
+
+msgid "Set filaments to use"
+msgstr ""
+
+msgid ""
+"No AMS filaments. Please select a printer in 'Device' page to load AMS info."
+msgstr ""
+
+msgid "Sync filaments with AMS"
+msgstr ""
+
+msgid ""
+"Sync filaments with AMS will drop all current selected filament presets and "
+"colors. Do you want to continue?"
+msgstr ""
+
+msgid "There are no compatible filaments, and sync is not performed."
+msgstr ""
+
 msgid "Untitled"
 msgstr "Untitled"
 
 #, boost-format
 msgid "Do you want to save changes to \"%1%\"?"
 msgstr "Do you want to save changes to \"%1%\"?"
+
+#, c-format, boost-format
+msgid ""
+"Successfully unmounted. The device %s(%s) can now be safely removed from the "
+"computer."
+msgstr ""
+
+#, c-format, boost-format
+msgid "Ejecting of device %s(%s) has failed."
+msgstr ""
 
 msgid "Previous unsaved project detected, do you want to restore it?"
 msgstr ""
@@ -3712,6 +3783,12 @@ msgstr "Save current %s"
 
 msgid "Delete this preset"
 msgstr "Delete this preset"
+
+msgid "Search in preset"
+msgstr ""
+
+msgid "Click to reset all settings to the last saved preset."
+msgstr ""
 
 msgid ""
 "Prime tower is required by timeplase. Are you sure you want to disable both "
@@ -4456,6 +4533,53 @@ msgid "New version of Bambu Studio"
 msgstr "New version of Bambu Studio"
 
 msgid "Don't remind me of this version again"
+msgstr ""
+
+msgid ""
+"Are you sure you want to update? This will take about 10 minutes. Do not "
+"turn off the power while the printer is updating."
+msgstr ""
+
+msgid ""
+"An important update was detected and needs to be run before printing can "
+"continue. Do you want to update now? You can also update later from 'Upgrade "
+"firmware'."
+msgstr ""
+
+msgid ""
+"The firmware version is abnormal. Repairing and updating are required before "
+"printing. Do you want to update now? You can also update later on printer or "
+"update next time starting the studio."
+msgstr ""
+
+msgid "Model:"
+msgstr ""
+
+msgid "Serial:"
+msgstr ""
+
+msgid "Version:"
+msgstr ""
+
+msgid "Upgrade firmware"
+msgstr ""
+
+msgid "Printing"
+msgstr ""
+
+msgid "Idle"
+msgstr ""
+
+msgid "Latest version"
+msgstr ""
+
+msgid "Upgrading"
+msgstr ""
+
+msgid "Upgrading failed"
+msgstr ""
+
+msgid "Upgrading successful"
 msgstr ""
 
 msgid "Saving objects into the 3mf failed."
@@ -5235,6 +5359,9 @@ msgid "Monotonic line"
 msgstr "Monotonic line"
 
 msgid "Aligned Rectilinear"
+msgstr ""
+
+msgid "Hilbert Curve"
 msgstr ""
 
 msgid "Bottom surface pattern"
@@ -6218,6 +6345,14 @@ msgstr "On build plate only"
 msgid "Don't create support on model surface, only on build plate"
 msgstr "This setting only generates supports that begin on the build plate."
 
+msgid "Support critical regions only"
+msgstr ""
+
+msgid ""
+"Only create support for critical regions including sharp tail, cantilever, "
+"etc."
+msgstr ""
+
 msgid "Top Z distance"
 msgstr "Top Z distance"
 
@@ -6716,6 +6851,9 @@ msgstr "Support: fix holes at layer %d"
 #, c-format, boost-format
 msgid "Support: propagate branches at layer %d"
 msgstr "Support: propagate branches at layer %d"
+
+#~ msgid "Reduce Triangles"
+#~ msgstr "Reduce Triangles"
 
 #~ msgid ""
 #~ "Switch to zig-zag pattern?\n"
