--- a/bbl/i18n/es/BambuStudio_es.po
+++ b/bbl/i18n/es/BambuStudio_es.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-09-21 11:05+0800\n"
+"POT-Creation-Date: 2022-09-27 16:25+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -837,8 +837,8 @@ msgstr "Retirar la placa seleccionada"
 msgid "Clone"
 msgstr "Clonar"
 
-msgid "Reduce Triangles"
-msgstr "Reducir los triángulos"
+msgid "Simplify Model"
+msgstr ""
 
 msgid "Center"
 msgstr ""
@@ -1939,12 +1939,10 @@ msgstr "Flujo"
 msgid "Tool"
 msgstr "Herramienta"
 
-#, c-format, boost-format
-msgid "Speed: %.f"
+msgid "Speed: "
 msgstr ""
 
-#, c-format, boost-format
-msgid "Flow: %.f"
+msgid "Flow: "
 msgstr ""
 
 msgid "Loading G-codes"
@@ -2043,6 +2041,9 @@ msgstr "Filamento 1"
 msgid "Flushed filament"
 msgstr "Filamento limpiado"
 
+msgid "Total"
+msgstr "Total"
+
 msgid "Filament change times"
 msgstr "Tiempos de cambio de filamento"
 
@@ -2075,9 +2076,6 @@ msgstr "Planificar tiempo"
 
 msgid "Model printing time"
 msgstr "Tiempo de impresión del modelo"
-
-msgid "Total"
-msgstr "Total"
 
 msgid "Switch to silent mode"
 msgstr "Cambiar al modo silencioso"
@@ -2588,12 +2586,15 @@ msgstr "¡Inicialización fallida (No hay dispositivo)!"
 msgid "Initializing..."
 msgstr "Iniciando..."
 
+msgid "Loading..."
+msgstr "Cargando..."
+
+msgid "Initialize failed (Not supported)!"
+msgstr ""
+
 #, c-format, boost-format
 msgid "Initialize failed [%d]!"
 msgstr "¡Ha fallado la inicialización [%d]!"
-
-msgid "Loading..."
-msgstr "Cargando..."
 
 msgid "Stopped."
 msgstr "Detenido."
@@ -2614,17 +2615,44 @@ msgstr "Month"
 msgid "All Files"
 msgstr ""
 
+msgid "Group files by year, recent first."
+msgstr ""
+
+msgid "Group files by month, recent first."
+msgstr ""
+
+msgid "Show all files, recent first."
+msgstr ""
+
+msgid "Switch to timelapse files."
+msgstr ""
+
 msgid "Video"
 msgstr "Video"
+
+msgid "Switch to video files."
+msgstr ""
+
+msgid "Delete selected files from printer."
+msgstr ""
 
 msgid "Download"
 msgstr "Descargar"
 
+msgid "Download selected files from printer."
+msgstr ""
+
 msgid "Management"
 msgstr "Management"
 
+msgid "Batch manage files."
+msgstr ""
+
 msgid "No printers."
 msgstr "No printers."
+
+msgid "Not supported."
+msgstr ""
 
 msgid "Connecting..."
 msgstr "Connecting..."
@@ -2726,6 +2754,12 @@ msgstr "Información de Depuración"
 
 msgid "Printing List"
 msgstr "Imprimiendo Lista"
+
+msgid "Cancel print"
+msgstr ""
+
+msgid "Are you sure you want to cancel this print?"
+msgstr ""
 
 msgid "Downloading..."
 msgstr "Downloading..."
@@ -2932,10 +2966,10 @@ msgctxt "Layers"
 msgid "Bottom"
 msgstr "Inferior"
 
-msgid "Spaghetti Detection"
+msgid "Spaghetti and Excess Chute Pileup Detection"
 msgstr ""
 
-msgid "Stop printing when spaghetti detected"
+msgid "Stop printing when Spaghetti or Excess Chute Pileup is detected"
 msgstr ""
 
 msgid "First Layer Inspection"
@@ -3007,12 +3041,49 @@ msgstr "Tipo de cama"
 msgid "Flushing volumes"
 msgstr "Volúmenes de limpieza"
 
+msgid "Add one filament"
+msgstr ""
+
+msgid "Remove last filament"
+msgstr ""
+
+msgid "Sync material list from AMS"
+msgstr ""
+
+msgid "Set filaments to use"
+msgstr ""
+
+msgid ""
+"No AMS filaments. Please select a printer in 'Device' page to load AMS info."
+msgstr ""
+
+msgid "Sync filaments with AMS"
+msgstr ""
+
+msgid ""
+"Sync filaments with AMS will drop all current selected filament presets and "
+"colors. Do you want to continue?"
+msgstr ""
+
+msgid "There are no compatible filaments, and sync is not performed."
+msgstr ""
+
 msgid "Untitled"
 msgstr "Sin título"
 
 #, boost-format
 msgid "Do you want to save changes to \"%1%\"?"
 msgstr "¿Quieres guardar los cambios en \"%1%\"?"
+
+#, c-format, boost-format
+msgid ""
+"Successfully unmounted. The device %s(%s) can now be safely removed from the "
+"computer."
+msgstr ""
+
+#, c-format, boost-format
+msgid "Ejecting of device %s(%s) has failed."
+msgstr ""
 
 msgid "Previous unsaved project detected, do you want to restore it?"
 msgstr ""
@@ -3779,6 +3850,12 @@ msgstr "Guardar %s actuales"
 msgid "Delete this preset"
 msgstr "Borra este ajuste"
 
+msgid "Search in preset"
+msgstr ""
+
+msgid "Click to reset all settings to the last saved preset."
+msgstr ""
+
 msgid ""
 "Prime tower is required by timeplase. Are you sure you want to disable both "
 "of them?"
@@ -4535,6 +4612,53 @@ msgid "New version of Bambu Studio"
 msgstr "Nueva versión de Bambu Studio"
 
 msgid "Don't remind me of this version again"
+msgstr ""
+
+msgid ""
+"Are you sure you want to update? This will take about 10 minutes. Do not "
+"turn off the power while the printer is updating."
+msgstr ""
+
+msgid ""
+"An important update was detected and needs to be run before printing can "
+"continue. Do you want to update now? You can also update later from 'Upgrade "
+"firmware'."
+msgstr ""
+
+msgid ""
+"The firmware version is abnormal. Repairing and updating are required before "
+"printing. Do you want to update now? You can also update later on printer or "
+"update next time starting the studio."
+msgstr ""
+
+msgid "Model:"
+msgstr ""
+
+msgid "Serial:"
+msgstr ""
+
+msgid "Version:"
+msgstr ""
+
+msgid "Upgrade firmware"
+msgstr ""
+
+msgid "Printing"
+msgstr ""
+
+msgid "Idle"
+msgstr ""
+
+msgid "Latest version"
+msgstr ""
+
+msgid "Upgrading"
+msgstr ""
+
+msgid "Upgrading failed"
+msgstr ""
+
+msgid "Upgrading successful"
 msgstr ""
 
 msgid "Saving objects into the 3mf failed."
@@ -5331,6 +5455,9 @@ msgid "Monotonic line"
 msgstr "Linea continua"
 
 msgid "Aligned Rectilinear"
+msgstr ""
+
+msgid "Hilbert Curve"
 msgstr ""
 
 msgid "Bottom surface pattern"
@@ -6333,6 +6460,14 @@ msgid "Don't create support on model surface, only on build plate"
 msgstr ""
 "No crear soporte en la superficie del modelo, sólo en la placa de impresión"
 
+msgid "Support critical regions only"
+msgstr ""
+
+msgid ""
+"Only create support for critical regions including sharp tail, cantilever, "
+"etc."
+msgstr ""
+
 msgid "Top Z distance"
 msgstr "Distancia Z superior"
 
@@ -6845,6 +6980,9 @@ msgstr "Soporte: arreglar huecos en la capa %d"
 #, c-format, boost-format
 msgid "Support: propagate branches at layer %d"
 msgstr "Soporte: propagar ramas en la capa %d"
+
+#~ msgid "Reduce Triangles"
+#~ msgstr "Reducir los triángulos"
 
 #~ msgid ""
 #~ "Switch to zig-zag pattern?\n"
