--- a/bbl/i18n/fr/BambuStudio_fr.po
+++ b/bbl/i18n/fr/BambuStudio_fr.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-09-21 11:05+0800\n"
+"POT-Creation-Date: 2022-09-27 16:25+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -836,8 +836,8 @@ msgstr "Supprimer la plaque sélectionnée"
 msgid "Clone"
 msgstr "Cloner"
 
-msgid "Reduce Triangles"
-msgstr "Réduire les triangles"
+msgid "Simplify Model"
+msgstr ""
 
 msgid "Center"
 msgstr ""
@@ -1912,12 +1912,10 @@ msgstr "débit"
 msgid "Tool"
 msgstr "Outil"
 
-#, c-format, boost-format
-msgid "Speed: %.f"
+msgid "Speed: "
 msgstr ""
 
-#, c-format, boost-format
-msgid "Flow: %.f"
+msgid "Flow: "
 msgstr ""
 
 msgid "Loading G-codes"
@@ -2016,6 +2014,9 @@ msgstr "Filament 1"
 msgid "Flushed filament"
 msgstr "Filament purgé"
 
+msgid "Total"
+msgstr "Total"
+
 msgid "Filament change times"
 msgstr "Temps de changement de filament"
 
@@ -2048,9 +2049,6 @@ msgstr "Temps de préparation"
 
 msgid "Model printing time"
 msgstr "Temps d'impression du modèle"
-
-msgid "Total"
-msgstr "Total"
 
 msgid "Switch to silent mode"
 msgstr "Passer en mode silencieux"
@@ -2562,12 +2560,15 @@ msgstr "Échec de l'initialisation (pas de périphérique) !"
 msgid "Initializing..."
 msgstr "Initialisation..."
 
+msgid "Loading..."
+msgstr "Chargement..."
+
+msgid "Initialize failed (Not supported)!"
+msgstr ""
+
 #, c-format, boost-format
 msgid "Initialize failed [%d]!"
 msgstr "Échec de l'initialisation [%d] !"
-
-msgid "Loading..."
-msgstr "Chargement..."
 
 msgid "Stopped."
 msgstr "Arrêté."
@@ -2588,17 +2589,44 @@ msgstr "Month"
 msgid "All Files"
 msgstr ""
 
+msgid "Group files by year, recent first."
+msgstr ""
+
+msgid "Group files by month, recent first."
+msgstr ""
+
+msgid "Show all files, recent first."
+msgstr ""
+
+msgid "Switch to timelapse files."
+msgstr ""
+
 msgid "Video"
 msgstr "Video"
+
+msgid "Switch to video files."
+msgstr ""
+
+msgid "Delete selected files from printer."
+msgstr ""
 
 msgid "Download"
 msgstr "Télécharger"
 
+msgid "Download selected files from printer."
+msgstr ""
+
 msgid "Management"
 msgstr "Management"
 
+msgid "Batch manage files."
+msgstr ""
+
 msgid "No printers."
 msgstr "No printers."
+
+msgid "Not supported."
+msgstr ""
 
 msgid "Connecting..."
 msgstr "Connecting..."
@@ -2700,6 +2728,12 @@ msgstr "Les informations de débogage"
 
 msgid "Printing List"
 msgstr "Liste d'impression"
+
+msgid "Cancel print"
+msgstr ""
+
+msgid "Are you sure you want to cancel this print?"
+msgstr ""
 
 msgid "Downloading..."
 msgstr "Downloading..."
@@ -2903,10 +2937,10 @@ msgctxt "Layers"
 msgid "Bottom"
 msgstr "Fond"
 
-msgid "Spaghetti Detection"
+msgid "Spaghetti and Excess Chute Pileup Detection"
 msgstr ""
 
-msgid "Stop printing when spaghetti detected"
+msgid "Stop printing when Spaghetti or Excess Chute Pileup is detected"
 msgstr ""
 
 msgid "First Layer Inspection"
@@ -2978,12 +3012,49 @@ msgstr "Type de lit"
 msgid "Flushing volumes"
 msgstr "Volumes de rinçage"
 
+msgid "Add one filament"
+msgstr ""
+
+msgid "Remove last filament"
+msgstr ""
+
+msgid "Sync material list from AMS"
+msgstr ""
+
+msgid "Set filaments to use"
+msgstr ""
+
+msgid ""
+"No AMS filaments. Please select a printer in 'Device' page to load AMS info."
+msgstr ""
+
+msgid "Sync filaments with AMS"
+msgstr ""
+
+msgid ""
+"Sync filaments with AMS will drop all current selected filament presets and "
+"colors. Do you want to continue?"
+msgstr ""
+
+msgid "There are no compatible filaments, and sync is not performed."
+msgstr ""
+
 msgid "Untitled"
 msgstr "Sans titre"
 
 #, boost-format
 msgid "Do you want to save changes to \"%1%\"?"
 msgstr "Voulez-vous enregistrer les modifications apportées à \"%1%\" ?"
+
+#, c-format, boost-format
+msgid ""
+"Successfully unmounted. The device %s(%s) can now be safely removed from the "
+"computer."
+msgstr ""
+
+#, c-format, boost-format
+msgid "Ejecting of device %s(%s) has failed."
+msgstr ""
 
 msgid "Previous unsaved project detected, do you want to restore it?"
 msgstr "Projet précédent non enregistré détecté, voulez-vous le restaurer ?"
@@ -3753,6 +3824,12 @@ msgstr "Enregistrer le %s actuel"
 msgid "Delete this preset"
 msgstr "Supprimer ce préréglage"
 
+msgid "Search in preset"
+msgstr ""
+
+msgid "Click to reset all settings to the last saved preset."
+msgstr ""
+
 msgid ""
 "Prime tower is required by timeplase. Are you sure you want to disable both "
 "of them?"
@@ -4514,6 +4591,53 @@ msgid "New version of Bambu Studio"
 msgstr "Nouvelle version de Bambu Studio"
 
 msgid "Don't remind me of this version again"
+msgstr ""
+
+msgid ""
+"Are you sure you want to update? This will take about 10 minutes. Do not "
+"turn off the power while the printer is updating."
+msgstr ""
+
+msgid ""
+"An important update was detected and needs to be run before printing can "
+"continue. Do you want to update now? You can also update later from 'Upgrade "
+"firmware'."
+msgstr ""
+
+msgid ""
+"The firmware version is abnormal. Repairing and updating are required before "
+"printing. Do you want to update now? You can also update later on printer or "
+"update next time starting the studio."
+msgstr ""
+
+msgid "Model:"
+msgstr ""
+
+msgid "Serial:"
+msgstr ""
+
+msgid "Version:"
+msgstr ""
+
+msgid "Upgrade firmware"
+msgstr ""
+
+msgid "Printing"
+msgstr ""
+
+msgid "Idle"
+msgstr ""
+
+msgid "Latest version"
+msgstr ""
+
+msgid "Upgrading"
+msgstr ""
+
+msgid "Upgrading failed"
+msgstr ""
+
+msgid "Upgrading successful"
 msgstr ""
 
 msgid "Saving objects into the 3mf failed."
@@ -5320,6 +5444,9 @@ msgid "Monotonic line"
 msgstr "Ligne monotone"
 
 msgid "Aligned Rectilinear"
+msgstr ""
+
+msgid "Hilbert Curve"
 msgstr ""
 
 msgid "Bottom surface pattern"
@@ -6335,6 +6462,14 @@ msgstr ""
 "Ne créez pas de support sur la surface du modèle, uniquement sur la plaque "
 "de construction"
 
+msgid "Support critical regions only"
+msgstr ""
+
+msgid ""
+"Only create support for critical regions including sharp tail, cantilever, "
+"etc."
+msgstr ""
+
 msgid "Top Z distance"
 msgstr "Distance Z supérieure"
 
@@ -6848,6 +6983,9 @@ msgstr "Support : Correction des trous dans la couche %d"
 #, c-format, boost-format
 msgid "Support: propagate branches at layer %d"
 msgstr "Support : propagation des branches à la couche %d"
+
+#~ msgid "Reduce Triangles"
+#~ msgstr "Réduire les triangles"
 
 #~ msgid ""
 #~ "Switch to zig-zag pattern?\n"
