--- a/bbl/i18n/hu/BambuStudio_hu.po
+++ b/bbl/i18n/hu/BambuStudio_hu.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-09-21 11:05+0800\n"
+"POT-Creation-Date: 2022-09-27 16:25+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -835,8 +835,8 @@ msgstr "Kiválasztott tálca eltávolítása"
 msgid "Clone"
 msgstr "Klónozás"
 
-msgid "Reduce Triangles"
-msgstr "Háromszögek csökkentése"
+msgid "Simplify Model"
+msgstr ""
 
 msgid "Center"
 msgstr ""
@@ -1931,12 +1931,10 @@ msgstr "Anyagáramlás"
 msgid "Tool"
 msgstr "Tool"
 
-#, c-format, boost-format
-msgid "Speed: %.f"
+msgid "Speed: "
 msgstr ""
 
-#, c-format, boost-format
-msgid "Flow: %.f"
+msgid "Flow: "
 msgstr ""
 
 msgid "Loading G-codes"
@@ -2035,6 +2033,9 @@ msgstr "Filament 1"
 msgid "Flushed filament"
 msgstr "Öblített filament"
 
+msgid "Total"
+msgstr "Összesen"
+
 msgid "Filament change times"
 msgstr "Filamentcserék száma"
 
@@ -2067,9 +2068,6 @@ msgstr "Előkészítési idő"
 
 msgid "Model printing time"
 msgstr "Modell nyomtatási ideje"
-
-msgid "Total"
-msgstr "Összesen"
 
 msgid "Switch to silent mode"
 msgstr "Switch to silent mode"
@@ -2589,12 +2587,15 @@ msgstr "Sikertelen inicializálás (Nincs eszköz)!"
 msgid "Initializing..."
 msgstr "Initializing..."
 
+msgid "Loading..."
+msgstr "Loading..."
+
+msgid "Initialize failed (Not supported)!"
+msgstr ""
+
 #, c-format, boost-format
 msgid "Initialize failed [%d]!"
 msgstr "Initalization failed [%d]!"
-
-msgid "Loading..."
-msgstr "Loading..."
 
 msgid "Stopped."
 msgstr "Megállítva."
@@ -2615,17 +2616,44 @@ msgstr "Month"
 msgid "All Files"
 msgstr ""
 
+msgid "Group files by year, recent first."
+msgstr ""
+
+msgid "Group files by month, recent first."
+msgstr ""
+
+msgid "Show all files, recent first."
+msgstr ""
+
+msgid "Switch to timelapse files."
+msgstr ""
+
 msgid "Video"
 msgstr "Video"
+
+msgid "Switch to video files."
+msgstr ""
+
+msgid "Delete selected files from printer."
+msgstr ""
 
 msgid "Download"
 msgstr "Letöltés"
 
+msgid "Download selected files from printer."
+msgstr ""
+
 msgid "Management"
 msgstr "Management"
 
+msgid "Batch manage files."
+msgstr ""
+
 msgid "No printers."
 msgstr "No printers."
+
+msgid "Not supported."
+msgstr ""
 
 msgid "Connecting..."
 msgstr "Csatlakozás..."
@@ -2727,6 +2755,12 @@ msgstr "Hibakeresési infó"
 
 msgid "Printing List"
 msgstr "Nyomtatási lista"
+
+msgid "Cancel print"
+msgstr ""
+
+msgid "Are you sure you want to cancel this print?"
+msgstr ""
 
 msgid "Downloading..."
 msgstr "Letöltés..."
@@ -2931,10 +2965,10 @@ msgctxt "Layers"
 msgid "Bottom"
 msgstr "Alsó"
 
-msgid "Spaghetti Detection"
+msgid "Spaghetti and Excess Chute Pileup Detection"
 msgstr ""
 
-msgid "Stop printing when spaghetti detected"
+msgid "Stop printing when Spaghetti or Excess Chute Pileup is detected"
 msgstr ""
 
 msgid "First Layer Inspection"
@@ -3004,12 +3038,49 @@ msgstr "Asztaltípus"
 msgid "Flushing volumes"
 msgstr "Öblítési mennyiségek"
 
+msgid "Add one filament"
+msgstr ""
+
+msgid "Remove last filament"
+msgstr ""
+
+msgid "Sync material list from AMS"
+msgstr ""
+
+msgid "Set filaments to use"
+msgstr ""
+
+msgid ""
+"No AMS filaments. Please select a printer in 'Device' page to load AMS info."
+msgstr ""
+
+msgid "Sync filaments with AMS"
+msgstr ""
+
+msgid ""
+"Sync filaments with AMS will drop all current selected filament presets and "
+"colors. Do you want to continue?"
+msgstr ""
+
+msgid "There are no compatible filaments, and sync is not performed."
+msgstr ""
+
 msgid "Untitled"
 msgstr "Untitled"
 
 #, boost-format
 msgid "Do you want to save changes to \"%1%\"?"
 msgstr "Szeretnéd elmenteni \"%1%\" változásait?"
+
+#, c-format, boost-format
+msgid ""
+"Successfully unmounted. The device %s(%s) can now be safely removed from the "
+"computer."
+msgstr ""
+
+#, c-format, boost-format
+msgid "Ejecting of device %s(%s) has failed."
+msgstr ""
 
 msgid "Previous unsaved project detected, do you want to restore it?"
 msgstr "Korábbi, nem mentett projektet találtunk, vissza szeretnéd állítani?"
@@ -3758,6 +3829,12 @@ msgstr "Jelenlegi %s mentése"
 
 msgid "Delete this preset"
 msgstr "Ezen beállítás törlése"
+
+msgid "Search in preset"
+msgstr ""
+
+msgid "Click to reset all settings to the last saved preset."
+msgstr ""
 
 msgid ""
 "Prime tower is required by timeplase. Are you sure you want to disable both "
@@ -4513,6 +4590,53 @@ msgid "New version of Bambu Studio"
 msgstr "A Bambu Studio új verziója"
 
 msgid "Don't remind me of this version again"
+msgstr ""
+
+msgid ""
+"Are you sure you want to update? This will take about 10 minutes. Do not "
+"turn off the power while the printer is updating."
+msgstr ""
+
+msgid ""
+"An important update was detected and needs to be run before printing can "
+"continue. Do you want to update now? You can also update later from 'Upgrade "
+"firmware'."
+msgstr ""
+
+msgid ""
+"The firmware version is abnormal. Repairing and updating are required before "
+"printing. Do you want to update now? You can also update later on printer or "
+"update next time starting the studio."
+msgstr ""
+
+msgid "Model:"
+msgstr ""
+
+msgid "Serial:"
+msgstr ""
+
+msgid "Version:"
+msgstr ""
+
+msgid "Upgrade firmware"
+msgstr ""
+
+msgid "Printing"
+msgstr ""
+
+msgid "Idle"
+msgstr ""
+
+msgid "Latest version"
+msgstr ""
+
+msgid "Upgrading"
+msgstr ""
+
+msgid "Upgrading failed"
+msgstr ""
+
+msgid "Upgrading successful"
 msgstr ""
 
 msgid "Saving objects into the 3mf failed."
@@ -5303,6 +5427,9 @@ msgid "Monotonic line"
 msgstr "Monotonikus vonal"
 
 msgid "Aligned Rectilinear"
+msgstr ""
+
+msgid "Hilbert Curve"
 msgstr ""
 
 msgid "Bottom surface pattern"
@@ -6304,6 +6431,14 @@ msgstr "Csak a tárgyasztaltól"
 msgid "Don't create support on model surface, only on build plate"
 msgstr "Nem generál támaszt a modell felületén, csak a tárgyasztalon"
 
+msgid "Support critical regions only"
+msgstr ""
+
+msgid ""
+"Only create support for critical regions including sharp tail, cantilever, "
+"etc."
+msgstr ""
+
 msgid "Top Z distance"
 msgstr "Z távolság"
 
@@ -6806,6 +6941,9 @@ msgstr "Support: fix holes at layer %d"
 #, c-format, boost-format
 msgid "Support: propagate branches at layer %d"
 msgstr "Support: propagate branches at layer %d"
+
+#~ msgid "Reduce Triangles"
+#~ msgstr "Háromszögek csökkentése"
 
 #~ msgid ""
 #~ "Switch to zig-zag pattern?\n"
