--- a/bbl/i18n/nl/BambuStudio_nl.po
+++ b/bbl/i18n/nl/BambuStudio_nl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-09-21 11:05+0800\n"
+"POT-Creation-Date: 2022-09-27 16:25+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -834,8 +834,8 @@ msgstr "Verwijder het huidige printbed"
 msgid "Clone"
 msgstr "Dupliceren"
 
-msgid "Reduce Triangles"
-msgstr "Aantal driehoeken verkleinen (vereenvoudigen)"
+msgid "Simplify Model"
+msgstr ""
 
 msgid "Center"
 msgstr ""
@@ -1936,12 +1936,10 @@ msgstr "Flow"
 msgid "Tool"
 msgstr "Hulpmiddel"
 
-#, c-format, boost-format
-msgid "Speed: %.f"
+msgid "Speed: "
 msgstr ""
 
-#, c-format, boost-format
-msgid "Flow: %.f"
+msgid "Flow: "
 msgstr ""
 
 msgid "Loading G-codes"
@@ -2040,6 +2038,9 @@ msgstr "Filament 1"
 msgid "Flushed filament"
 msgstr "Flushed filament"
 
+msgid "Total"
+msgstr "Totaal"
+
 msgid "Filament change times"
 msgstr "Filamentwisseltijden"
 
@@ -2072,9 +2073,6 @@ msgstr "Voorbereidingstijd"
 
 msgid "Model printing time"
 msgstr "Model print tijd"
-
-msgid "Total"
-msgstr "Totaal"
 
 msgid "Switch to silent mode"
 msgstr "Omzetten naar stille modus"
@@ -2585,12 +2583,15 @@ msgstr "Het initializeren is mislukt (geen apparaat)!"
 msgid "Initializing..."
 msgstr "Initialiseren..."
 
+msgid "Loading..."
+msgstr "Laden..."
+
+msgid "Initialize failed (Not supported)!"
+msgstr ""
+
 #, c-format, boost-format
 msgid "Initialize failed [%d]!"
 msgstr "Het initialiseren is mislukt [%d]!"
-
-msgid "Loading..."
-msgstr "Laden..."
 
 msgid "Stopped."
 msgstr "Gestopt."
@@ -2611,17 +2612,44 @@ msgstr "Maand"
 msgid "All Files"
 msgstr ""
 
+msgid "Group files by year, recent first."
+msgstr ""
+
+msgid "Group files by month, recent first."
+msgstr ""
+
+msgid "Show all files, recent first."
+msgstr ""
+
+msgid "Switch to timelapse files."
+msgstr ""
+
 msgid "Video"
 msgstr "Video"
+
+msgid "Switch to video files."
+msgstr ""
+
+msgid "Delete selected files from printer."
+msgstr ""
 
 msgid "Download"
 msgstr "Downloaden"
 
+msgid "Download selected files from printer."
+msgstr ""
+
 msgid "Management"
 msgstr "Management"
 
+msgid "Batch manage files."
+msgstr ""
+
 msgid "No printers."
 msgstr "Geen printers"
+
+msgid "Not supported."
+msgstr ""
 
 msgid "Connecting..."
 msgstr "Verbinden..."
@@ -2723,6 +2751,12 @@ msgstr "Informatie over Debuggen"
 
 msgid "Printing List"
 msgstr "Print lijst"
+
+msgid "Cancel print"
+msgstr ""
+
+msgid "Are you sure you want to cancel this print?"
+msgstr ""
 
 msgid "Downloading..."
 msgstr "Downloaden..."
@@ -2935,10 +2969,10 @@ msgctxt "Layers"
 msgid "Bottom"
 msgstr "Onderste"
 
-msgid "Spaghetti Detection"
+msgid "Spaghetti and Excess Chute Pileup Detection"
 msgstr ""
 
-msgid "Stop printing when spaghetti detected"
+msgid "Stop printing when Spaghetti or Excess Chute Pileup is detected"
 msgstr ""
 
 msgid "First Layer Inspection"
@@ -3010,12 +3044,49 @@ msgstr "Printbed type"
 msgid "Flushing volumes"
 msgstr "Volumes schoonmaken"
 
+msgid "Add one filament"
+msgstr ""
+
+msgid "Remove last filament"
+msgstr ""
+
+msgid "Sync material list from AMS"
+msgstr ""
+
+msgid "Set filaments to use"
+msgstr ""
+
+msgid ""
+"No AMS filaments. Please select a printer in 'Device' page to load AMS info."
+msgstr ""
+
+msgid "Sync filaments with AMS"
+msgstr ""
+
+msgid ""
+"Sync filaments with AMS will drop all current selected filament presets and "
+"colors. Do you want to continue?"
+msgstr ""
+
+msgid "There are no compatible filaments, and sync is not performed."
+msgstr ""
+
 msgid "Untitled"
 msgstr "Naamloos"
 
 #, boost-format
 msgid "Do you want to save changes to \"%1%\"?"
 msgstr "Wilt u de wijzigingen opslaan in \"%1%\"?"
+
+#, c-format, boost-format
+msgid ""
+"Successfully unmounted. The device %s(%s) can now be safely removed from the "
+"computer."
+msgstr ""
+
+#, c-format, boost-format
+msgid "Ejecting of device %s(%s) has failed."
+msgstr ""
 
 msgid "Previous unsaved project detected, do you want to restore it?"
 msgstr ""
@@ -3782,6 +3853,12 @@ msgstr "Bewaar huidige %s"
 msgid "Delete this preset"
 msgstr "Verwijder deze voorinstelling"
 
+msgid "Search in preset"
+msgstr ""
+
+msgid "Click to reset all settings to the last saved preset."
+msgstr ""
+
 msgid ""
 "Prime tower is required by timeplase. Are you sure you want to disable both "
 "of them?"
@@ -4542,6 +4619,53 @@ msgid "New version of Bambu Studio"
 msgstr "Nieuwe versie van Bambu Studio"
 
 msgid "Don't remind me of this version again"
+msgstr ""
+
+msgid ""
+"Are you sure you want to update? This will take about 10 minutes. Do not "
+"turn off the power while the printer is updating."
+msgstr ""
+
+msgid ""
+"An important update was detected and needs to be run before printing can "
+"continue. Do you want to update now? You can also update later from 'Upgrade "
+"firmware'."
+msgstr ""
+
+msgid ""
+"The firmware version is abnormal. Repairing and updating are required before "
+"printing. Do you want to update now? You can also update later on printer or "
+"update next time starting the studio."
+msgstr ""
+
+msgid "Model:"
+msgstr ""
+
+msgid "Serial:"
+msgstr ""
+
+msgid "Version:"
+msgstr ""
+
+msgid "Upgrade firmware"
+msgstr ""
+
+msgid "Printing"
+msgstr ""
+
+msgid "Idle"
+msgstr ""
+
+msgid "Latest version"
+msgstr ""
+
+msgid "Upgrading"
+msgstr ""
+
+msgid "Upgrading failed"
+msgstr ""
+
+msgid "Upgrading successful"
 msgstr ""
 
 msgid "Saving objects into the 3mf failed."
@@ -5342,6 +5466,9 @@ msgid "Monotonic line"
 msgstr "Monotone lijn"
 
 msgid "Aligned Rectilinear"
+msgstr ""
+
+msgid "Hilbert Curve"
 msgstr ""
 
 msgid "Bottom surface pattern"
@@ -6355,6 +6482,14 @@ msgstr "Alleen op het printbed"
 msgid "Don't create support on model surface, only on build plate"
 msgstr "Deze instelling genereert alleen support die begint op het printbed."
 
+msgid "Support critical regions only"
+msgstr ""
+
+msgid ""
+"Only create support for critical regions including sharp tail, cantilever, "
+"etc."
+msgstr ""
+
 msgid "Top Z distance"
 msgstr "Top Z afstand"
 
@@ -6866,6 +7001,9 @@ msgstr "Support: repareer gaten op laag %d"
 #, c-format, boost-format
 msgid "Support: propagate branches at layer %d"
 msgstr "Support: verspreid takken op laag %d"
+
+#~ msgid "Reduce Triangles"
+#~ msgstr "Aantal driehoeken verkleinen (vereenvoudigen)"
 
 #~ msgid ""
 #~ "Switch to zig-zag pattern?\n"
